[package]
name = "wiki-rs"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = { version = "4", features = ["openssl"]   } # Use actix-web to implement a backend server
env_logger = "0.9" # for logging
openssl = "0.10" # for TLS
actix-files = "0.6.0" # For file serving
json = "0.12"
serde = { version = "1.0", features = ["derive"] } # to serialize/deserialize
serde_json = "1.0"
urlencoding = "2.1.0" # For encoding the filename
pulldown-cmark = { version = "0.9.1", default-features = false } # to parse markdown

dotenv = "0.15.0"
actix-cors = "0.6.0"
uuid = { version = "1", features = [ "serde", "v4" ] }
regex = "1"
either = "1"
chrono = "0.4"
actix-web-httpauth = "0.6"
actix-multipart = "0.4"
futures = "0.3"

jsonwebtoken = "8"
derive_more = "0.99"
